# RknnDetector

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/rknndetector/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov5_mask_labels_list.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h  postprocess.cpp
app/src/main/java/com/example/rknndetector/: MainActivity.kt  RknnDriver.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rknndetector/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
